--- a/SmartRoomSolution/SmartRoomSolution/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/SmartRoomSolution/SmartRoomSolution/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoomSolution.Models.ExternalLoginConfirmationViewModel
+﻿@model SmartRoomSolution.Web.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
