--- a/SmartRoomSolution/SmartRoomSolution/Views/Account/Register.cshtml
+++ b/SmartRoomSolution/SmartRoomSolution/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoomSolution.Models.RegisterViewModel
+﻿@model SmartRoomSolution.Web.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
