--- a/SmartRoomSolution/SmartRoomSolution/Views/Account/ResetPassword.cshtml
+++ b/SmartRoomSolution/SmartRoomSolution/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoomSolution.Models.ResetPasswordViewModel
+﻿@model SmartRoomSolution.Web.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
