--- a/SmartRoomSolution/SmartRoomSolution/Views/Account/SendCode.cshtml
+++ b/SmartRoomSolution/SmartRoomSolution/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoomSolution.Models.SendCodeViewModel
+﻿@model SmartRoomSolution.Web.Models.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
