--- a/SmartRoomSolution/SmartRoomSolution/Views/Account/VerifyCode.cshtml
+++ b/SmartRoomSolution/SmartRoomSolution/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoomSolution.Models.VerifyCodeViewModel
+﻿@model SmartRoomSolution.Web.Models.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
