--- a/SmartRoomSolution/SmartRoomSolution/Views/Manage/AddPhoneNumber.cshtml
+++ b/SmartRoomSolution/SmartRoomSolution/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoomSolution.Models.AddPhoneNumberViewModel
+﻿@model SmartRoomSolution.Web.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
