--- a/SmartRoomSolution/SmartRoomSolution/Views/Manage/ChangePassword.cshtml
+++ b/SmartRoomSolution/SmartRoomSolution/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoomSolution.Models.ChangePasswordViewModel
+﻿@model SmartRoomSolution.Web.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
