--- a/SmartRoomSolution/SmartRoomSolution/Views/Manage/Index.cshtml
+++ b/SmartRoomSolution/SmartRoomSolution/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoomSolution.Models.IndexViewModel
+﻿@model SmartRoomSolution.Web.Models.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
