--- a/SmartRoomSolution/SmartRoomSolution/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/SmartRoomSolution/SmartRoomSolution/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoomSolution.Models.VerifyPhoneNumberViewModel
+﻿@model SmartRoomSolution.Web.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
