--- a/SmartRoomSolution/SmartRoomSolution/Views/Account/ForgotPassword.cshtml
+++ b/SmartRoomSolution/SmartRoomSolution/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoomSolution.Models.ForgotPasswordViewModel
+﻿@model SmartRoomSolution.Web.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
