--- a/SmartRoomSolution/SmartRoomSolution/Views/Manage/ManageLogins.cshtml
+++ b/SmartRoomSolution/SmartRoomSolution/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoomSolution.Models.ManageLoginsViewModel
+﻿@model SmartRoomSolution.Web.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
