--- a/SmartRoomSolution/SmartRoomSolution/Views/Manage/SetPassword.cshtml
+++ b/SmartRoomSolution/SmartRoomSolution/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoomSolution.Models.SetPasswordViewModel
+﻿@model SmartRoomSolution.Web.Models.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
