--- a/SmartRoomSolution/SmartRoom/Views/Shared/_Layout.cshtml
+++ b/SmartRoomSolution/SmartRoom/Views/Shared/_Layout.cshtml
@@ -34,6 +34,16 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
+    <div class="navbar navbar-inverse navbar-fixed-bottom">
+        <div class="container">
+            <span class="nav-bottom navbar-bottom-right">
+                @DateTime.Now.ToShortTimeString()
+            </span>
+            <span class="nav-bottom navbar-bottom-left">
+                @DateTime.Now.ToShortDateString()
+            </span>
+        </div>
+    </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
