even more styling changes

--- a/SmartRoomSolution/SmartRoom/Content/Site.css
+++ b/SmartRoomSolution/SmartRoom/Content/Site.css
@@ -31,7 +31,17 @@ textarea {
     color: #FCFFFF;
     background-color: transparent;
 }
-
+.col-md-4{
+    border-style:solid;
+    border-width:medium;
+    max-height: 20%;
+    max-width: 20%;
+    margin:5px;
+}
+.col-md-4 p{
+    overflow: hidden;
+    max-height:150px;
+}
 .col-md-4 h2 {
     color: #489CA4;
 }
@@ -91,6 +101,14 @@ textarea {
     }
 }
 
+a {
+    color: #B5F9FF;
+}
+
+    a:active, a:hover {
+        color: #B5F9FF;
+    }
+
 .nav-bottom {
     position: relative;
     padding: 8px 9px;
@@ -109,4 +127,81 @@ textarea {
     .container {
         max-width: 80%;
     }
+}
+
+.nav > li > a:hover {
+    background-color: #66ABE7;
+}
+
+.nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
+    background-color: #66ABE7;
+    border-color: #428bca;
+}
+
+ul.dropdown-menu > li {
+    background-color: #66ABE7;
+    color: #B5F9FF;
+    padding-left: 10px;
+}
+
+.open > .dropdown-menu {
+    background-color: #66ABE7;
+}
+
+.nav .caret {
+    border-top-color: #B5F9FF;
+    border-bottom-color: #B5F9FF;
+}
+
+.nav-tabs {
+    border-bottom: none;
+}
+
+.navbar-header:before,
+.navbar-header:after {
+    display: none;
+    content: " ";
+}
+
+.app-name{
+    padding: 15px 15px;
+    font-size: 25px;
+    line-height: 20px;
+    float: left;
+    color:#B5F9FF;
+}
+
+.row
+{
+    padding-top: 30px;
+}
+a.app-name:link {
+    text-decoration: none;
+}
+
+a.app-name:visited {
+    text-decoration: none;
+}
+
+a.app-name:hover {
+    text-decoration: none;
+}
+
+a.app-name:active {
+    text-decoration: none;
+}
+.user{
+    padding: 15px 15px;
+    font-size: 15px;
+    line-height: 20px;
+    float: right;
+    color:#B5F9FF;
+}
+.navbar-header-right{
+    margin-top:5px;
+    float: right;
+}
+.dropdown-menu > li > a
+{
+    color:white;
 }
