--- a/SmartRoomSolution/SmartRoom/Views/Shared/_Layout.cshtml
+++ b/SmartRoomSolution/SmartRoom/Views/Shared/_Layout.cshtml
@@ -11,36 +11,50 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                <ul class="nav nav-tabs">
+                    <li role="presentation" class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu" role="menuitem">
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">A</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">B</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">C</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">D</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
+            <div class="app-name">SmartRoom</div>
+            <div class="navbar-header navbar-header-right">
+                <ul class="nav nav-tabs">
+                    <li role="presentation" class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
+                            <span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span>
+                        </a>
+                        <ul class="dropdown-menu" role="menuitem">
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">E</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">F</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">G</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">H</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="user">User Name</div>
         </div>
     </div>
     <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+        @RenderBody()<br />
     </div>
     <div class="navbar navbar-inverse navbar-fixed-bottom">
         <div class="container">
             <span class="nav-bottom navbar-bottom-right">
+                @* need to add javascript to update time, currently only shows time on load *@
                 @DateTime.Now.ToShortTimeString()
             </span>
             <span class="nav-bottom navbar-bottom-left">
-                @DateTime.Now.ToShortDateString()
+                @DateTime.Now.ToLongDateString()
             </span>
         </div>
     </div>
