--- a/SmartRoom/SmartRoom.Web/Views/Account/VerifyCode.cshtml
+++ b/SmartRoom/SmartRoom.Web/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoom.Web.Models.VerifyCodeViewModel
+﻿@model SmartRoom.Models.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
