--- a/SmartRoom/SmartRoom.Web/Views/Manage/AddPhoneNumber.cshtml
+++ b/SmartRoom/SmartRoom.Web/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoom.Web.Models.AddPhoneNumberViewModel
+﻿@model SmartRoom.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
