--- a/SmartRoom/SmartRoom.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/SmartRoom/SmartRoom.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoom.Web.Models.ExternalLoginConfirmationViewModel
+﻿@model SmartRoom.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
