--- a/SmartRoom/SmartRoom.Web/Views/Manage/ChangePassword.cshtml
+++ b/SmartRoom/SmartRoom.Web/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoom.Web.Models.ChangePasswordViewModel
+﻿@model SmartRoom.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
