this should fix everything

--- a/SmartRoom/SmartRoom/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/SmartRoom/SmartRoom/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoom.Models.ExternalLoginConfirmationViewModel
+﻿@model SmartRoom.Web.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
