--- a/SmartRoom/SmartRoom/Views/Account/ForgotPassword.cshtml
+++ b/SmartRoom/SmartRoom/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoom.Models.ForgotPasswordViewModel
+﻿@model SmartRoom.Web.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
