--- a/SmartRoom/SmartRoom/Views/Account/ResetPassword.cshtml
+++ b/SmartRoom/SmartRoom/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoom.Models.ResetPasswordViewModel
+﻿@model SmartRoom.Web.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
