--- a/SmartRoom/SmartRoom/Views/Manage/ManageLogins.cshtml
+++ b/SmartRoom/SmartRoom/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoom.Models.ManageLoginsViewModel
+﻿@model SmartRoom.Web.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
