--- a/SmartRoom/SmartRoom/Views/Manage/SetPassword.cshtml
+++ b/SmartRoom/SmartRoom/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoom.Models.SetPasswordViewModel
+﻿@model SmartRoom.Web.Models.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
