--- a/SmartRoom/SmartRoom/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/SmartRoom/SmartRoom/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoom.Models.VerifyPhoneNumberViewModel
+﻿@model SmartRoom.Web.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
