--- a/SmartRoom/SmartRoom/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/SmartRoom/SmartRoom/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartRoom.Models.ExternalLoginListViewModel
+﻿@model SmartRoom.Web.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
