database initialization fix

--- a/SmartRoom/SmartRoom/Views/Courses/Index.cshtml
+++ b/SmartRoom/SmartRoom/Views/Courses/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SmartRoom.Web.Database.Tables.Course>
+﻿@model IEnumerable<SmartRoom.Database.Tables.Course>
 
 @{
     ViewBag.Title = "Index";
