--- a/SmartRoom/SmartRoom/Views/YoutubeLive/Delete.cshtml
+++ b/SmartRoom/SmartRoom/Views/YoutubeLive/Delete.cshtml
@@ -12,11 +12,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Courses.Subject)
+            @Html.DisplayNameFor(model => model.Course.Subject)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Courses.Subject)
+            @Html.DisplayFor(model => model.Course.Subject)
         </dd>
 
         <dt>
