--- a/SmartRoom/SmartRoom/Views/YoutubeLive/Edit.cshtml
+++ b/SmartRoom/SmartRoom/Views/YoutubeLive/Edit.cshtml
@@ -18,6 +18,14 @@
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
+            @Html.LabelFor(model => model.CourseId, "CourseId", new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("CourseId", String.Empty)
+                @Html.ValidationMessageFor(model => model.CourseId)
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.BroadcastId, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.BroadcastId)
