--- a/SmartRoom/SmartRoom/Views/YoutubeLive/Details.cshtml
+++ b/SmartRoom/SmartRoom/Views/YoutubeLive/Details.cshtml
@@ -122,6 +122,15 @@
             @Html.DisplayFor(model => model.StreamCDNIngestionUrl)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Embededhtml)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Embededhtml)
+
+        </dd>
+
     </dl>
 </div>
 <p>
