--- a/SmartRoom/SmartRoom/Views/YoutubeLive/Details.cshtml
+++ b/SmartRoom/SmartRoom/Views/YoutubeLive/Details.cshtml
@@ -127,7 +127,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Embededhtml)
+          @Html.Raw(ViewBag.Embededhtml)
 
         </dd>
 
