--- a/SmartRoom/SmartRoom/Views/YoutubeLive/Index.cshtml
+++ b/SmartRoom/SmartRoom/Views/YoutubeLive/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SmartRoom.Database.Tables.YoutubeLiveDetail>
+﻿@model IEnumerable<SmartRoom.Web.YoutubeLiveDetail>
 
 @{
     ViewBag.Title = "Index";
