--- a/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Index.cshtml
+++ b/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SmartRoom.Database.Tables.Course>
+﻿@model IEnumerable<SmartRoom.Web.Course>
 
 @{
     ViewBag.Title = "Index";
@@ -9,8 +9,9 @@
 <p>
     @if (User.IsInRole("Teacher"))
     {
-        Html.ActionLink("Create New", "Create");
+        @Html.ActionLink("Create New", "Create");
     }
+        
         
 </p>
 <table class="table">
