FirstPlayer~DBChanges~basicHTML

--- a/SmartRoom/SmartRoom/Views/Youtube/Delete.cshtml
+++ b/SmartRoom/SmartRoom/Views/Youtube/Delete.cshtml
@@ -28,6 +28,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.BroadcastKind)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.BroadcastKind)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.BroadcastTitle)
         </dt>
 
@@ -68,6 +76,30 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.BroadcastchannelId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.BroadcastchannelId)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.BroadcastlifeCycleStatus)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.BroadcastlifeCycleStatus)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.BroadcastEmbededhtml)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.BroadcastEmbededhtml)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.StreamId)
         </dt>
 
@@ -76,19 +108,27 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.StreamTitle)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.StreamTitle)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.StreamKind)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.StreamKind)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.StreamName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.StreamName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.StreamStatus)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.StreamStatus)
         </dd>
 
         <dt>
@@ -121,6 +161,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.StreamCDNIngestionUrl)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.StreamcontentclosedCaptionsIngestionUrl)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.StreamcontentclosedCaptionsIngestionUrl)
         </dd>
 
     </dl>
