--- a/SmartRoom/SmartRoom/Views/Youtube/Edit.cshtml
+++ b/SmartRoom/SmartRoom/Views/Youtube/Edit.cshtml
@@ -1,13 +1,13 @@
 ﻿@model SmartRoom.Database.Tables.YoutubeLiveDetail
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
@@ -15,6 +15,7 @@
         <h4>YoutubeLiveDetail</h4>
         <hr />
         @Html.ValidationSummary(true)
+        @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
             @Html.LabelFor(model => model.CourseId, "CourseId", new { @class = "control-label col-md-2" })
@@ -24,11 +25,19 @@
             </div>
         </div>
 
-     <!--   <div class="form-group">
+       <!-- <div class="form-group">
             @Html.LabelFor(model => model.BroadcastId, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.BroadcastId)
                 @Html.ValidationMessageFor(model => model.BroadcastId)
+            </div>
+        </div> -->
+
+      <!--  <div class="form-group">
+            @Html.LabelFor(model => model.BroadcastKind, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.BroadcastKind)
+                @Html.ValidationMessageFor(model => model.BroadcastKind)
             </div>
         </div> -->
 
@@ -67,26 +76,49 @@
         <div class="form-group">
             @Html.LabelFor(model => model.BroadcastStatus, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BroadcastStatus)
-                @Html.ValidationMessageFor(model => model.BroadcastStatus)
+                @Html.DropDownListFor(model => model.BroadcastStatus, new SelectList(
+                  new List<Object>{
+                       new { value = "private" , text = "Private Stream"  },
+                       new { value = "public" , text = "Public Stream"  },
+                       new { value = "Unlisted" , text = "Unlisted Stream"  }
+                    },
+                  "value",
+                  "text",
+                   2))
             </div>
         </div>
 
-     <!--   <div class="form-group">
+      <!--  <div class="form-group">
+            @Html.LabelFor(model => model.BroadcastchannelId, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.BroadcastchannelId)
+                @Html.ValidationMessageFor(model => model.BroadcastchannelId)
+            </div>
+        </div> -->
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.BroadcastlifeCycleStatus, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.BroadcastlifeCycleStatus)
+                @Html.ValidationMessageFor(model => model.BroadcastlifeCycleStatus)
+            </div>
+        </div>
+
+       <!-- <div class="form-group">
+            @Html.LabelFor(model => model.BroadcastEmbededhtml, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.BroadcastEmbededhtml)
+                @Html.ValidationMessageFor(model => model.BroadcastEmbededhtml)
+            </div>
+        </div> -->
+
+       <!-- <div class="form-group">
             @Html.LabelFor(model => model.StreamId, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.StreamId)
                 @Html.ValidationMessageFor(model => model.StreamId)
             </div>
         </div> -->
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.StreamTitle, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.StreamTitle)
-                @Html.ValidationMessageFor(model => model.StreamTitle)
-            </div>
-        </div>
 
      <!--   <div class="form-group">
             @Html.LabelFor(model => model.StreamKind, new { @class = "control-label col-md-2" })
@@ -95,6 +127,22 @@
                 @Html.ValidationMessageFor(model => model.StreamKind)
             </div>
         </div> -->
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.StreamName, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.StreamName)
+                @Html.ValidationMessageFor(model => model.StreamName)
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.StreamStatus, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.StreamStatus)
+                @Html.ValidationMessageFor(model => model.StreamStatus)
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.StreamSnippetTitle, new { @class = "control-label col-md-2" })
@@ -107,12 +155,21 @@
         <div class="form-group">
             @Html.LabelFor(model => model.StreamCDNFormat, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.StreamCDNFormat)
-                @Html.ValidationMessageFor(model => model.StreamCDNFormat)
+                @Html.DropDownListFor(model => model.StreamCDNFormat, new SelectList(
+                  new List<Object>{
+                       new { value = "1080p" , text = "1080p"  },
+                       new { value = "720p" , text = "720p"  },
+                       new { value = "480p" , text = "480p"  },
+                       new { value = "360p" , text = "360p"  },
+                       new { value = "240p" , text = "240p"  }
+                    },
+                  "value",
+                  "text",
+                   2))
             </div>
         </div>
 
-     <!--   <div class="form-group">
+      <!--  <div class="form-group">
             @Html.LabelFor(model => model.StreamCDNIngestionType, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.StreamCDNIngestionType)
@@ -128,9 +185,17 @@
             </div>
         </div> -->
 
+      <!--  <div class="form-group">
+            @Html.LabelFor(model => model.StreamcontentclosedCaptionsIngestionUrl, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.StreamcontentclosedCaptionsIngestionUrl)
+                @Html.ValidationMessageFor(model => model.StreamcontentclosedCaptionsIngestionUrl)
+            </div>
+        </div> -->
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
