--- a/SmartRoom/SmartRoom/Views/Shared/_Layout.cshtml
+++ b/SmartRoom/SmartRoom/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - SmartRoom</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/Scripts/YouTubePlayer")
 
 </head>
 <body>
