--- a/SmartRoom/SmartRoom/Views/Youtube/Index.cshtml
+++ b/SmartRoom/SmartRoom/Views/Youtube/Index.cshtml
@@ -18,6 +18,9 @@
             @Html.DisplayNameFor(model => model.BroadcastId)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.BroadcastKind)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.BroadcastTitle)
         </th>
         <th>
@@ -33,13 +36,25 @@
             @Html.DisplayNameFor(model => model.BroadcastStatus)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.BroadcastchannelId)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.BroadcastlifeCycleStatus)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.BroadcastEmbededhtml)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.StreamId)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.StreamTitle)
+            @Html.DisplayNameFor(model => model.StreamKind)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.StreamKind)
+            @Html.DisplayNameFor(model => model.StreamName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.StreamStatus)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.StreamSnippetTitle)
@@ -53,6 +68,9 @@
         <th>
             @Html.DisplayNameFor(model => model.StreamCDNIngestionUrl)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.StreamcontentclosedCaptionsIngestionUrl)
+        </th>
         <th></th>
     </tr>
 
@@ -63,6 +81,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.BroadcastId)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.BroadcastKind)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.BroadcastTitle)
@@ -80,13 +101,25 @@
             @Html.DisplayFor(modelItem => item.BroadcastStatus)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.BroadcastchannelId)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.BroadcastlifeCycleStatus)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.BroadcastEmbededhtml)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.StreamId)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.StreamTitle)
+            @Html.DisplayFor(modelItem => item.StreamKind)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.StreamKind)
+            @Html.DisplayFor(modelItem => item.StreamName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.StreamStatus)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.StreamSnippetTitle)
@@ -99,6 +132,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.StreamCDNIngestionUrl)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.StreamcontentclosedCaptionsIngestionUrl)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
