--- a/SmartRoom/SmartRoom/Views/Shared/_Layout.cshtml
+++ b/SmartRoom/SmartRoom/Views/Shared/_Layout.cshtml
@@ -5,11 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - SmartRoom</title>
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-    @Scripts.Render("~/Scripts/YouTubePlayer")
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("scripts", required: false)
+    @Scripts.Render("~/Scripts/jquery-ui-1.11.4.min.js")
+    <style>
+        #sortable {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            width: 100%;
+        }
+
+            #sortable li {
+                margin: 3px 3px 3px 0;
+                padding: 1px;
+                float: left;
+                width: 20%;
+                height: 10%;
+                font-size: 16px;
+                text-align: center;
+    border-style: solid;
+    border-width: 2px;
+            }
+    </style>
+    <script>
+        $(function () {
+            $("#sortable").sortable();
+            $("#sortable").disableSelection();
+        });
+        function startTime() {
+            var today = new Date();
+            var h = today.getHours();
+            var m = today.getMinutes();
+            var s = today.getSeconds();
+            m = checkTime(m);
+            s = checkTime(s);
+            document.getElementById('clock').innerHTML = h + ":" + m + ":" + s;
+            var t = setTimeout(function () { startTime() }, 500);
+            document.getElementById('date').innerHTML = (new Date()).toDateString();
+        }
+
+        function checkTime(i) {
+            if (i < 10) { i = "0" + i };  // add zero in front of numbers < 10
+            return i;
+        }
+    </script>
 
 </head>
-<body>
+<body onload="startTime()">
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -22,12 +67,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { Area = "" }, new{})))</li>
-                    <li>@Html.ActionLink("About", "About", "Home", new { Area = "" }, new{}))</li>
-                    <li>@Html.ActionLink("Courses", "Index", "Courses", new { Area = "Classroom" }, new { }))</li>
-                    <li>@Html.ActionLink("YouTube Demo", "Create", "YoutubeLive", new { Area = "" }, new { }))</li>
-                    <li>@Html.ActionLink("YouTube Presentation", "Index", "YoutubeLive", new { Area = "" }, new { }))</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home", new { Area = "" }, new { })))</li>
+                    @*<li>@Html.ActionLink("Home", "Index", "Home", new { Area = "" }, new{})))</li>
+                        <li>@Html.ActionLink("About", "About", "Home", new { Area = "" }, new{}))</li>
+                        <li>@Html.ActionLink("Courses", "Index", "Courses", new { Area = "Classroom" }, new { }))</li>
+                        <li>@Html.ActionLink("YouTube Demo", "Create", "YoutubeLive", new { Area = "" }, new { }))</li>
+                        <li>@Html.ActionLink("YouTube Presentation", "Index", "YoutubeLive", new { Area = "" }, new { }))</li>
+                        <li>@Html.ActionLink("Contact", "Contact", "Home", new { Area = "" }, new { })))</li>*@
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -35,14 +80,15 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - SmartRoom</p>
-        </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+
+    <div class="navbar navbar-inverse navbar-fixed-bottom">
+        <div class="container">
+            <div class="navbar-text navbar-right" id="clock">
+            </div>
+            <div class="navbar-text navbar-left" id="date"></div>
+            </div>
+    </div>
 </body>
 </html>
