--- a/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Details.cshtml
+++ b/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Details.cshtml
@@ -1,98 +1,100 @@
 ﻿@model SmartRoom.Web.Course
 
 @{
-    ViewBag.Title = "Details";
+	ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
-
 <div>
-    <h4>Course</h4>
+	@Html.Action("_Header", "Header")
+</div>
+<h2>Details</h2>
+<div>
+	<h4>Course</h4>
 	<hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Subject)
-        </dt>
+	<dl class="dl-horizontal">
+		<dt>
+			@Html.DisplayNameFor(model => model.Subject)
+		</dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Subject)
-        </dd>
+		<dd>
+			@Html.DisplayFor(model => model.Subject)
+		</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CourseNumber)
-        </dt>
+		<dt>
+			@Html.DisplayNameFor(model => model.CourseNumber)
+		</dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.CourseNumber)
-        </dd>
+		<dd>
+			@Html.DisplayFor(model => model.CourseNumber)
+		</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Section)
-        </dt>
+		<dt>
+			@Html.DisplayNameFor(model => model.Section)
+		</dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Section)
-        </dd>
+		<dd>
+			@Html.DisplayFor(model => model.Section)
+		</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
+		<dt>
+			@Html.DisplayNameFor(model => model.Title)
+		</dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
+		<dd>
+			@Html.DisplayFor(model => model.Title)
+		</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
+		<dt>
+			@Html.DisplayNameFor(model => model.StartDate)
+		</dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
+		<dd>
+			@Html.DisplayFor(model => model.StartDate)
+		</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EndDate)
-        </dt>
+		<dt>
+			@Html.DisplayNameFor(model => model.EndDate)
+		</dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.EndDate)
-        </dd>
+		<dd>
+			@Html.DisplayFor(model => model.EndDate)
+		</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Location)
-        </dt>
+		<dt>
+			@Html.DisplayNameFor(model => model.Location)
+		</dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Location)
-        </dd>
+		<dd>
+			@Html.DisplayFor(model => model.Location)
+		</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Term)
-        </dt>
+		<dt>
+			@Html.DisplayNameFor(model => model.Term)
+		</dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Term)
-        </dd>
+		<dd>
+			@Html.DisplayFor(model => model.Term)
+		</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </dt>
+		<dt>
+			@Html.DisplayNameFor(model => model.CreatedBy)
+		</dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.CreatedBy)
-        </dd>
+		<dd>
+			@Html.DisplayFor(model => model.CreatedBy)
+		</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CreateDate)
-        </dt>
+		<dt>
+			@Html.DisplayNameFor(model => model.CreateDate)
+		</dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.CreateDate)
-        </dd>
+		<dd>
+			@Html.DisplayFor(model => model.CreateDate)
+		</dd>
 
-    </dl>
+	</dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+	@Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+	@Html.ActionLink("Back to List", "Index")
 </p>
