--- a/SmartRoom/SmartRoom/Views/Account/ExternalLoginFailure.cshtml
+++ b/SmartRoom/SmartRoom/Views/Account/ExternalLoginFailure.cshtml
@@ -4,5 +4,5 @@
 
 <hgroup>
     <h2>@ViewBag.Title.</h2>
-    <h3 class="text-danger">Unsuccessful login with service.</h3>
+    <h3 class="text-danger">Unsuccessful login with service. @ViewBag.Error</h3>
 </hgroup>
