--- a/SmartRoom/SmartRoom/Areas/YouTube/Views/YouTube/Index.cshtml
+++ b/SmartRoom/SmartRoom/Areas/YouTube/Views/YouTube/Index.cshtml
@@ -81,9 +81,8 @@
         <tr>
 
             <td>
-              <button >
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id })  
-              </button>  
+              <button > @Html.ActionLink("Edit", "Edit", new { id = item.Id })</button>  
+                <button>@Html.ActionLink("Transition", "Transition", new { id = item.Id })</button>
                 <button >@Html.ActionLink("Details","Details", new { id = item.Id })</button>
                 <button >@Html.ActionLink("Delete","Delete", new { id = item.Id })</button>
 
